package com.user_ms.dto;

public record PostUserDto(String name, String email) {
}
