package com.user_ms.dto;

public record PutUserDto(String name) {
}
